style.css
h1, h2, h3, h4, p, a {
  font-family: 'Open Sans', Helvetica, Arial, sans-serif;
}


body {
  background-color: #F4F4F4;
}

a {
  color: white;
}


#leftSidebar {
  width: 15%;
  height: 600px;
  background-color: #30404F;
  float: left;
  color: #F4F4F4;
  /*position: fixed;*/
}

.side-nav {
  list-style-type: none;
}

.highlight-menu-item {
  background-color: pink;
}
.welcome {
  background-color: white;
  width: 70%;
  float: left;
  border: solid 1px #E7EAEC;
  margin: 1em;
  padding: 0.9em;
}


.chart {
  background-color: white;
  width: 30%;
  float: left;
  border: solid 1px #E7EAEC;
  margin: 1em;
  /*padding: 0.5em;*/
}



canvas {
  background-color: inherit;
  /*width: 50%;*/
  /*padding: 0.5em;*/
}


.side-menu-active {
  color: white;
}

